# cmake-cpp-fetch-content-template

./: CMakeLists.txt
src/: main.cpp
